--- a/de/trans/trTabellenLevel2.dita
+++ b/de/trans/trTabellenLevel2.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trTabellenLevel2">
-    <title>Tabellen Level 2 "table detection"</title>
+    <title>Tabelle Level 2 "table detection"</title>
     <body>
         <p></p>
     </body>
