--- a/de/trans/trTabellenLevel1.dita
+++ b/de/trans/trTabellenLevel1.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trTabellenLevel1">
-    <title>Tabelle Level 1 "sparse text"</title>
+    <title>Tabelle Level 1 <i>sparse text</i></title>
     <body>
         <p></p>
     </body>
