--- a/de/trans/trTabellenTyp.dita
+++ b/de/trans/trTabellenTyp.dita
@@ -26,7 +26,8 @@
                         Ausrichtung des Textes. Diese können z. Bsp. Gegenüberstellungen von
                         Text/Zahlenpassagen sein. Vergleichbar sind auch diese Strukturen mit
                         verschiedenen Listenformen (sortierte, unsortierte, definitorische). Es wird
-                        empfohlen diese Formen als Listen oder Paragrafen zu annotieren.</p>
+                        empfohlen diese Formen als Listen oder Paragrafen sowie die Ausrichtung als
+                        Spalten zu annotieren.</p>
                 </dd>
             </dlentry>
         </dl>
