--- a/de/trans/lySchriftarten.dita
+++ b/de/trans/lySchriftarten.dita
@@ -27,8 +27,7 @@
             &lt;/TextLine>
  &lt;/TextRegion></codeblock>
             Siehe: <xref
-                href="http://www.ocr-d.de/sites/all/gt_guidelines/pagecontent_xsd_Complex_Type_pc_TextStyleType.html?hl=textstyle"
-                format="html" scope="external">Complex Type pc:TextStyleType</xref>
+                href="../pagexml/pagecontent_xsd_Complex_Type_pc_TextStyleType.dita"/>
         </example>
     </body>
     <topic id="lySchriftarten_cluster">
