--- a/de/trans/fa.dita
+++ b/de/trans/fa.dita
@@ -3,7 +3,9 @@
 <topic id="fa">
     <title>❓ Fragen und Antworten</title>
     <body>
-        <p>Im Folgenden werden Antworten zu verschiedenen Problemen der Ground-Truth-Erstellung wieder gegeben. Diese wurden von Nutzern im OCR-D-Wiki gestellt und zuerst veröffentlicht.</p>
+        <p>Im Folgenden werden Antworten zu verschiedenen Problemen der Ground-Truth-Erstellung
+            wiedergegeben. Diese wurden von Nutzern im OCR-D-Wiki gestellt und zuerst
+            veröffentlicht.</p>
         <p>Haben Sie Fragen? Dann schreiben Sie Ihre Frage in das <xref
                 href="https://github.com/OCR-D/ocrd-website/wiki#section-on-ground-truth"
                 format="html" scope="external">OCR-D-Wiki.</xref></p>
