--- a/de/trans/trTabellen_Aletheia.dita
+++ b/de/trans/trTabellen_Aletheia.dita
@@ -2,11 +2,13 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trTabellen_Aletheia">
     <title>Tabellen mit Aletheia erstellen</title>
-    <shortdesc></shortdesc>
+    <shortdesc>Mit der Version 4 wird die Annotation von Tabellen in Aletheia noch besser unterstützt.</shortdesc>
     <body>
         <p></p>
+        <p><object width="1280" height="720" data="https://www.youtube.com/embed/4ZQCGmv7UUg"
+                outputclass="iframe">
+                <param name="allowfullscreen"/>
+            </object></p>
     </body>
 </topic>
-
-
 
