--- a/de/trans/trTabellen_eSriptorium.dita
+++ b/de/trans/trTabellen_eSriptorium.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trTabellen_eSriptorium">
-    <title>Tabellen mit eScriptorium</title>
+    <title>Tabellen mit eScriptorium erstellen</title>
     <body>
         <p></p>
     </body>
