--- a/de/trans/trTabellenWerkzeuge.dita
+++ b/de/trans/trTabellenWerkzeuge.dita
@@ -17,7 +17,7 @@
             ermöglichen. Alternativ können diese Werte im PAGE-XML-Format erfolgen. Auch hierfür ist
             umfangreiches und spezialisiertes Wissen des PAGE-Formates zwingend notwendig. Sollte im
             Tabellen Level 4 erfasst werden, bei dem das Tabellennetz erfasst wird, ist die
-            Verwendung eines sehr leistungsfähigen Werkzeuges unumgänglich. </p>
+            Verwendung eines sehr leistungsfähigen Werkzeugs unumgänglich. </p>
         <p>
         
         </p>
