--- a/de/trans/trTabellen_Aletheia.dita
+++ b/de/trans/trTabellen_Aletheia.dita
@@ -4,11 +4,19 @@
     <title>Tabellen mit Aletheia erstellen</title>
     <shortdesc>Mit der Version 4 wird die Annotation von Tabellen in Aletheia noch besser unterstützt.</shortdesc>
     <body>
-        <p></p>
+        <p>Aletheia ist ein Werkzeug zur Analyse, Transkription, Kurration, automatischen
+            Segmentieung und Zeichenerkennung vor allem von Druckpublikationen. Dieses Werkzeug ist
+            ebenfalls die Referenzimplementation des PAGE-XML-Formates. [vgl <xref
+                href="https://www.primaresearch.org/tools/Aletheia" format="html" scope="external"
+                >Aletheia Document Analysis System</xref></p>
+        <p>Aletheia kann in die <b>Leistungsklasse komplex, Einsteiger- und Experten-Tool
+            </b>eingeordnet werden. Mit diesem Tool können Tabellen in allen Tabellen Level (1, 2,
+            3, 4) erstellt werden.</p>
+        <p/>
         <p><object width="1280" height="720" data="https://www.youtube.com/embed/4ZQCGmv7UUg"
                 outputclass="iframe">
                 <param name="allowfullscreen"/>
             </object></p>
     </body>
+    
 </topic>
-
