--- a/de/trans/page_xml_erweiterungen.dita
+++ b/de/trans/page_xml_erweiterungen.dita
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="page_xml_erweiterungen">
-    <title>📚 Page XML Erweiterungen</title><body><p>Unter PAGE XML Erweiterungen ist nicht im engen Sinn eine Erweiterung des PAGE Schemas zu verstehen.</p>
-        <p>Eher werden in diesem Teil spezifische Erweiterungen des PAGE-Formates dokumentiert. Ebenfalls werden Hinweise u. a. für die Einbindung von anderen Formaten gegeben.</p></body>
+    <title>📚 PAGE- XML-Erweiterungen</title><body><p>Unter PAGE-XML-Erweiterungen ist nicht im engen Sinn eine Erweiterung des PAGE-XML-Schemas zu
+            verstehen.</p>
+        <p>Eher werden in diesem Teil spezifische Erweiterungen des PAGE-XML-Formats dokumentiert.
+            Ebenfalls werden Hinweise u. a. für die Einbindung von anderen Formaten gegeben.</p></body>
     
 </topic>
