--- a/de/trans/structur_gtdefinition.dita
+++ b/de/trans/structur_gtdefinition.dita
@@ -3,10 +3,10 @@
 <topic id="structur_gtdefinition">
 <title>Definition</title>
 <shortdesc>Das Korpus beinhaltet ausschließlich Datenstrukturen. Auf dem Digitalisat sind einzelne
-Regionen entsprechend des PAGE-Schema ausgezeichnet.</shortdesc>
+        Regionen entsprechend des PAGE-XML-Schema ausgezeichnet.</shortdesc>
 <body>
 <p>Das OCR-D Struktur Ground-Truth-Korpus umfasst Publikationen aus dem Zeitraum 1500 - 1900. Auf
-dem Digitalisat sind einzelne Regionen entsprechend des PAGE-Schema ausgezeichnet. Darüberhinaus
-sind einzelne Seiten entsprechend ihres Inhaltes kategorisiert.</p>
+            dem Digitalisat sind einzelne Regionen entsprechend des PAGE-XML-Schema ausgezeichnet.
+            Darüberhinaus sind einzelne Seiten entsprechend ihres Inhaltes kategorisiert.</p>
 </body>
 </topic>
