--- a/de/trans/trPage.dita
+++ b/de/trans/trPage.dita
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trPage">
-    <title>📓 Dokumentation des PAGE XML Formats</title>
+    <title>📓 Dokumentation des PAGE-XML-Formats</title>
 <abstract><shortdesc>Die automatisch erstellte Dokumentation gibt einen Überblick über alle Bestandteile des Schemas.</shortdesc></abstract><body>
-<p>Die Dokumentation des PAGE XML Schema wurde automatisch erzeugt. Dafür wurde das vom
-PrimaLab bereitgestellte Schema und das automatische Schema-Dokumentations-Werkzeug des
-Oxygen-Editor genutzt. Die Dokumentation ist in Englisch abgefasst.</p>
+<p>Die Dokumentation des PAGE-XML-Schema wurde automatisch erzeugt. Dafür wurde das vom PrimaLab
+            bereitgestellte Schema und das automatische Schema-Dokumentations-Werkzeug des
+            Oxygen-Editor genutzt. Die Dokumentation ist in Englisch abgefasst.</p>
 </body>
 <related-links>
 <link href="http://www.primaresearch.org/tools/PAGELibraries" format="html" scope="external"><desc>PAGE-XML Schema auf PRImA-Research-Lab</desc></link>
