--- a/de/trans/structur_gtgrundlage.dita
+++ b/de/trans/structur_gtgrundlage.dita
@@ -4,11 +4,12 @@
 <title>Grundlage</title><shortdesc>Das OCR-D Struktur Ground-Truth-Korpus umfasst Publikationen aus dem Zeitraum 1500 - 1900.</shortdesc>
     <body>
 <p>Der Inhalt des Korpus basiert auf manuell erfassten Zoning-Daten, die im Zuge des DFG Projektes
-Deutsches Textarchiv erfasst wurden. Diese Daten dienten der Unterstützung der manuellen
-Transkription im Double Keying-Verfahren. Die Zonen markieren ausschließlich quadratische Regionen
-auf dem Digitalisat. Eine Bearbeitung (Cropping, Dewarping) der Digitalisate wurde nicht
-vorgenommen. Die Daten wurden im Rahmen des DFG Projektes Deutsches Textarchiv im Unterschied zum
-Element-Repertoire des PAGE-Formates in Teilen tiefer erschlossen. Diese Tiefenerschließung ist als
-Wert des <tt>custom-Atributt</tt> festgehalten.</p>
+            Deutsches Textarchiv erfasst wurden. Diese Daten dienten der Unterstützung der manuellen
+            Transkription im Double Keying-Verfahren. Die Zonen markieren ausschließlich
+            quadratische Regionen auf dem Digitalisat. Eine Bearbeitung (Cropping, Dewarping) der
+            Digitalisate wurde nicht vorgenommen. Die Daten wurden im Rahmen des DFG Projektes
+            Deutsches Textarchiv im Unterschied zum Element-Repertoire des PAGE-XML-Formates in
+            Teilen tiefer erschlossen. Diese Tiefenerschließung ist als Wert des
+                <tt>custom-Atributt</tt> festgehalten.</p>
 </body>
 </topic>
