--- a/de/trans/impressum.dita
+++ b/de/trans/impressum.dita
@@ -53,7 +53,7 @@ Frank Wiegand</li>
 Pack</li>
         </ul>  
         
-        <p>Kontakt: <xref href="mailto:haaf@bbaw.de" format="html" scope="external">boenig@bbaw.de</xref></p>
+      <p>Kontakt: <xref href="mailto:boenig@bbaw.de" format="html" scope="external">boenig@bbaw.de</xref></p>
     </section>
     <section>
       <title>Technische Realisierung der Dokumentationsseiten</title>
