--- a/de/trans/trTabellen.dita
+++ b/de/trans/trTabellen.dita
@@ -2,8 +2,11 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="trTabellen">
     <title>Tabellen</title>
+    <shortdesc>Die Erstellung und Einschätzung von GT der Tabellen umfasst, setzt voraus, dass vorhandene 
+        Tabellen als solche erkannt, definiert und zielorientiert transkribiert werden. Die Anwendung der Level soll helfen bedarfsgerechten GT 
+        zu erstellen oder vorhandenen GT in seiner Funktion und Anwendung einzuschätzen.</shortdesc>
     <body>
-        <p>Die Erstellung und Einschätzung von GT der Tabellen umfasst, setzt voraus, dass vorhandene Tabellen als solche erkannt und definiert werden. Im Folgenden können Tabellen bedarfsgerecht und zielgerichtet annotiert werden.</p>
+        <p></p>
         <bodydiv outputclass="nav-pills">
         <section>
                 <title>Merkmale</title>
