--- a/de/trans/index.dita
+++ b/de/trans/index.dita
@@ -3,20 +3,13 @@
 <topic id="index">
     <title>Die Ground Truth Richtlinien</title>
     <body>
-        <p>Der Einsatz von Referenzdaten für Training und Auswertung statistischer Annotations- und
-            Analyseverfahren ist ein Kernmerkmal empirischer Forschung. Die wichtigste Grundlage für
-            die erfolgreiche Verwendung solcher Verfahren liegt im Einsatz geeigneter, den
-            Algorithmen zugrunde liegender Modelle. Für deren Erstellung ist neben einem passenden
-            Lernverfahren das Vorhandensein von Ground Truth die wesentliche Voraussetzung.</p>
-        <p>Mit den OCR-D-Ground-Truth-Guidelines wurden Richtlinien geschaffen, die eine
-            Format-Dokumentation des vorhandenen <xref href="https://ocr-d.github.io/en/data"
-                format="html" scope="external">OCR-D-Ground-Truth</xref> darstellt und als
-            Handlungsanweisung für die Ground-Truth-Erstellung genutzt werden kann. Mit dieser
-            Normierung kann der Ground-Truth technisch validiert werden. Darüber hinaus können
-            vorhandene Transkriptionen auf Grundlage dieses Regelwerkes überprüft und gegebenenfalls
-            in Ground-Truth-Daten umgewandelt werden.</p>
-        <p>Das Datenformat des OCR-D-Ground-Truth ist PAGE-XML. Dieses Format wurde initial durch
-            das PRImA Research Lab an der Universität Salford Greater Manchester entwickelt und
+        <p>Die OCR-D-Ground-Truth-Guidelines bieten Handlungsanweisungen für die
+            Ground-Truth-Erstellung. Die Ground-Truth kann so technisch validiert werden und
+            vorhandene Transkriptionen auf Grundlage dieses Regelwerkes überprüft sowie
+            gegebenenfalls in Ground-Truth-Daten umgewandelt werden.</p>
+        <p> Das Datenformat des OCR-D-Ground-Truth ist PAGE-XML. Dieses Format wurde initial durch
+            das <xref href="https://primaresearch.org/" format="html" scope="external">PRImA
+                Research Lab</xref> an der Universität Salford Greater Manchester entwickelt und
             innerhalb des EU-Projektes IMPACT grundlegend erweitert. Zurzeit wird es vom PRImA
             Research Lab betreut. Um eine Weiterentwicklung und Pflege dieses Formates zu
             gewährleisten, wurde auf Initiative von OCR-D ein PAGE-XML-Board geschaffen.</p>
